fixed work div layout issue

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -88,7 +88,7 @@
 
   #work-selection{
     position:relative;
-    margin-top:100px;
+    margin-top:140px;
   }
 
   div.detail{
